force-app/main/default/objects/Teacher__c/fields/Aadhaar_ID__c.field-meta.xml
<CustomField>
    <fullName>Aadhaar_ID__c</fullName>
    <description>Stores Aadhaar Number</description>
    <label>Aadhaar ID</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>