force-app/main/default/objects/Teacher__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Highest Qualification</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B.E</fullName>
            </value>
            <value>
                <fullName>B.Ed</fullName>
            </value>
            <value>
                <fullName>B.SC</fullName>
            </value>
            <value>
                <fullName>BBA</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>D.Ed</fullName>
            </value>
            <value>
                <fullName>MBA</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>PUC</fullName>
            </value>
            <value>
                <fullName>SSLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>