force-app/main/default/objects/Teacher__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>