force-app/main/default/objects/Teacher__c/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <label>PAN</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>