force-app/main/default/objects/Teacher__c/fields/T_ID__c.field-meta.xml
<CustomField>
    <fullName>T_ID__c</fullName>
    <displayFormat>T-{000}</displayFormat>
    <label>T-ID</label>
    <type>AutoNumber</type>
</CustomField>