force-app/main/default/objects/Teacher__c/validationRules/Aadhar_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_ID</fullName>
    <active>true</active>
    <description>Aadhaar number should be of 12 digits</description>
    <errorConditionFormula>OR(NOT(ISNUMBER(Aadhaar_ID__c)),
LEN(Aadhaar_ID__c)&lt;12,
ISBLANK(Aadhaar_ID__c))</errorConditionFormula>
    <errorDisplayField>Aadhaar_ID__c</errorDisplayField>
    <errorMessage>Enter a valid Aadhar number.</errorMessage>
</ValidationRule>