force-app/main/default/objects/Teacher__c/validationRules/PAN_10digit.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_10digit</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
NOT( REGEX( PAN__c , &quot;[A-Za-z]{5}[0-9]{4}[A-z]{1}&quot;)),
ISBLANK(PAN__c)
)</errorConditionFormula>
    <errorDisplayField>PAN__c</errorDisplayField>
    <errorMessage>Enter a valid PAN Number</errorMessage>
</ValidationRule>